master: fixed spacing issue

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   flex-wrap: wrap;
-    width: 1523px;
+    width: 1524px;
       margin: 0 auto;
   margin-top: 10%;
   font-family: 'Raleway', sans-serif;
